[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/demon/commen/demonSpawnball.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=2]
radius = 0.1

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3( 0, 1, 0 )

[sub_resource type="SpatialMaterial" id=4]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.05, 0.05 )

[node name="demonSpawnball" type="RigidBody"]
collision_layer = 0
contacts_reported = 2
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="spawnParticles" type="Particles" parent="."]
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_demonSpawnball_body_entered"]
[connection signal="timeout" from="destroyTimer" to="." method="_on_destroyTimer_timeout"]
